ansible/templates/prometheusingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.devopshemantkumar.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kind-prometheus-kube-prome-prometheus
            port:
              number: 9090
